ignore log files

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,6 @@ Logs/shadercompiler-UnityShaderCompiler.exe2.log
 Logs/shadercompiler-UnityShaderCompiler.exe3.log
 Logs/shadercompiler-UnityShaderCompiler.exe4.log
 Logs/shadercompiler-UnityShaderCompiler.exe5.log
+Logs/AssetImportWorker0.log
+*.log
+Logs/shadercompiler-AssetImportWorker0.log
